--- a/src/components/registration/Registration.module.scss
+++ b/src/components/registration/Registration.module.scss
@@ -2,10 +2,45 @@
 @import 'src/styles/mixins.module';
 
 .container {
-  @include grid(100.8rem,'');
+  @include grid(100.8rem, '');
+
   .box {
     background-color: #fff;
     grid-column: 6/9;
-    @include flex (center,center,column);
+    border-radius: 0.8rem;
+    @include flex('', '', column);
+    padding: 2.5rem 3.3rem 3rem 3.3rem;
+    h2,h3{
+      color:$primary-title;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom:3.2rem;
+    }
+    input{
+
+    }
+    .forgot {
+      @include flex(center, flex-end, row);
+      color:$primary-title;
+      padding-right: 0.4rem;
+    }
+    p {
+      text-align: center;
+    }
+    button{
+      @include flex(center, center, column);
+      width: 14em;
+      height:2rem;
+      border: none;
+      border-radius: 0.8rem;
+      padding: 1rem;
+      color: $secondary-btn-text;
+      background-color: $primary-btn;
+    }
+    a{
+      @include flex(center, center, row);
+      color:$link ;
+    }
   }
 }
