--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,21 @@
-body {
+html {
   font-size: 10px;
+}
+body {
   height: 100vh;
   background: linear-gradient(180deg, rgba(230, 212, 222, 1) 0%, rgba(152, 144, 199, 1) 100%);
+  font-size: 16px;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
+ul {
+  list-style: none;
 }
