--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -7,6 +7,6 @@
 }
 .secondary {
   @extend .default;
-  color: blue;
-  background-color: #2D2E46;
+  color: #21268F;
+  background-color: #D7D8EF;
 }
